refactor:重构发布房屋信息接口
